tests/models/enum/named/vec/fail/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(ge = 2)]
        value: Vec<()>
    },
}
fn main() {}
